--- a/CscSolution/CscMvc/packages.config
+++ b/CscSolution/CscMvc/packages.config
@@ -18,6 +18,8 @@
   <package id="Microsoft.Net.Compilers" version="2.7.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="RouteJs.Mvc5" version="2.2.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
